# openstack-tenantctl

./: .bumpversion.toml  .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  config-sample  pyproject.toml
.github/: CICD.md
.github/workflows/: ci.yml  cloud-integration-test.yml.sample
config-sample/: defaults.yaml  federation_static.json  federation_static_group.json
config-sample/projects/: dev.yaml  federation-group.yaml  prod.yaml
docs/: API-REFERENCE.md  CONFIG-SCHEMA.md  DESIGN-DECISIONS.md  LIBRARY-API.md  README.md  SPECIFICATION.md  USER-GUIDE.md
docs/examples/: README.md  context_building.py  custom_config_source.py  custom_workflow.py  example_connection_reuse.py  federation_workflow.py  fip_management.py  quota_update.py
docs/proposals/: init-config-scaffolding.md  pydantic-validation-proposal.md
src/: __init__.py  client.py  config_loader.py  config_resolver.py  config_validator.py  context.py  main.py  reconciler.py  scaffold.py  state_store.py  unit_parser.py  utils.py
src/models/: __init__.py  access.py  defaults.py  federation.py  network.py  project.py  quotas.py  security.py  state.py
src/resources/: compute.py  federation.py  group_roles.py  keystone_groups.py  network.py  project.py  quotas.py  security_group.py  teardown.py
src/resources/prealloc/: __init__.py  fip.py  network.py
src/sample_config/: __init__.py  defaults.yaml
src/sample_config/projects/: federation-group.yaml  minimal.yaml
tests/: conftest.py  test_client.py  test_config_loader.py  test_context.py  test_dry_run_state_store.py  test_fip_drift_dry_run.py  test_in_memory_state_store.py  test_integration_health_check.py  test_main.py  test_models.py  test_opt_in_guards.py  test_project_build.py  test_public_api.py  test_reconciler.py  test_retry.py  test_scaffold.py  test_state_store.py  test_state_store_concurrency.py  test_subnet_auto_calculation.py  test_unit_parser.py  test_version.py
tests/fixtures/health-check/: defaults.yaml
tests/fixtures/health-check/projects/: test_project.yaml
tests/test_resources/: test_compute.py  test_federation.py  test_group_roles.py  test_keystone_groups.py  test_network.py  test_preallocated_fips.py  test_preallocated_network.py  test_project.py  test_quotas.py  test_security_group.py  test_teardown.py
