[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openstack-tenantctl"
version = "0.2.8"
description = "Project-as-Code for OpenStack — declarative tenant provisioning enabling IaaS"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openstacksdk>=4.0,<5.0",
    "pyyaml>=6.0",
    "deepmerge>=1.1",
    "tenacity>=8.2",
    "filelock>=3.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
    "ruff>=0.4.0",
    "mypy>=1.8",
    "types-requests>=2.31",
    "types-PyYAML>=6.0",
    "bandit[toml]>=1.7",
    "build>=1.0",
    "twine>=5.0",
    "bump-my-version>=0.26.0",
]

[project.scripts]
tenantctl = "src.main:cli"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    # --- Existing ---
    "E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF",
    # --- Tier 1: low noise, high value ---
    "C4",    # flake8-comprehensions
    "PT",    # pytest style
    "RET",   # return style
    "PIE",   # misc simplifications
    "T20",   # print detection
    "TCH",   # type-checking imports
    "PERF",  # performance anti-patterns
    # --- Tier 2: guardrails with targeted ignores ---
    "S",     # bandit security
    "EM",    # exception message style
    "FBT",   # boolean trap
    "G",     # logging format
    "PTH",   # pathlib
]
ignore = [
    "PT019",  # fixture-param-without-value — false positives on factory fixtures
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S108"]  # assert + /tmp paths are fine in tests
"src/main.py" = ["T201"]       # print() is intentional CLI output

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "error::openstack.warnings.RemovedInSDK50Warning",
]
